# docker-optimization-guide

./: .gitignore  README.md
.github/: dependabot.yml  gitlab-mirror.yml
.github/workflows/: docker-build-test.yml  gitlab-mirror.yml
dotnet/: .dockerignore  Dockerfile.step1  Dockerfile.step2  Dockerfile.step3  Dockerfile.step4  ProductApi.csproj  Program.cs
dotnet/Models/: Product.cs
go/: .dockerignore  Dockerfile.step1  Dockerfile.step2  Dockerfile.step3  Dockerfile.step4  go.mod  go.sum  main.go
java/: .dockerignore  Dockerfile.step1  Dockerfile.step2  Dockerfile.step3  Dockerfile.step4  pom.xml
java/src/main/java/com/example/bookapi/: Book.java  BookController.java
java/src/main/resources/: application.properties
nodejs/: .dockerignore  Dockerfile.step1  Dockerfile.step2  Dockerfile.step3  Dockerfile.step4  package-lock.json  package.json
nodejs/src/: index.js
python/: .dockerignore  Dockerfile.step1  Dockerfile.step2  Dockerfile.step3  Dockerfile.step4  main.py  requirements.txt
rust/: .dockerignore  Cargo.toml  Dockerfile.step1  Dockerfile.step2  Dockerfile.step3  Dockerfile.step4
rust/src/: main.rs
